# qsharp

./: .eslintrc.cjs  .gitignore  .prettierignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  CodeQL.yml  NOTES.md  NOTICE.txt  README.md  SUPPORT.md  TODO.md  _TODO.md  bench.sh  build.py  build_version.py  cgmanifest.json  clippy.toml  demo.ipynb  dev.mjs  eslint.config.mjs  format_all.ps1  makeNpmDrop.mjs  package-lock.json  package.json  prereqs.py  test.py  test.qs  update_package_suffix.py  update_ver.py  version.py  watch.mjs  z.py
allocator/: Cargo.toml
allocator/mimalloc-sys/: CMakeLists.txt  Cargo.toml  build.rs
allocator/mimalloc-sys/src/: lib.rs
allocator/src/: lib.rs  mimalloc.rs
compiler/qsc/: Cargo.toml  README.md  build.rs
compiler/qsc/benches/: array_literal  eval.rs  large.qs  large.rs  library.rs  nqueens.qs  nqueens.rs  rca.rs  typeck.rs
compiler/qsc/src/: cli.rs  codegen.rs  compile.rs  diagnostic.rs  error.rs  incremental.rs  interpret.rs  lib.rs  location.rs  main.rs  packages.rs  qasm.rs  stateful.rs  stateless.rs  target.rs
compiler/qsc/tests/: samples.rs
compiler/qsc_ast/: Cargo.toml
compiler/qsc_ast/src/: assigner.rs  ast.rs  lib.rs  mut_visit.rs  transform.rs  validate.rs  visit.rs  visitor.rs
compiler/qsc_circuit/: Cargo.toml
compiler/qsc_circuit/src/: builder.rs  circ_to_qsharp.rs  circuit.rs  circuit_to_qsharp.rs  json_to_circuit.rs  lib.rs  operations.rs  qviz_to_qsharp.rs
compiler/qsc_codegen/: Cargo.toml
compiler/qsc_codegen/src/: lib.rs  llvm.rs  qir.rs  qir_base.rs  qsharp.rs  remapper.rs  rir_passes.rs
compiler/qsc_data_structures/: Cargo.toml
compiler/qsc_data_structures/src/: functor.rs  functors.rs  index_map.rs  language_features.rs  lib.rs  line_column.rs  linter.rs  namespaces.rs  span.rs  target.rs  telemetry.rs
compiler/qsc_doc_gen/: Cargo.toml
compiler/qsc_doc_gen/src/: display.rs  generate_docs.rs  lib.rs  table_of_contents.rs
compiler/qsc_eval/: Cargo.toml
compiler/qsc_eval/src/: backend.rs  debug.rs  error.rs  globals.rs  interactive.rs  intrinsic.rs  lib.rs  lower.rs  noise.rs  output.rs  state.rs  stateful.rs  stateless.rs  tests.rs  val.rs
compiler/qsc_fir/: Cargo.toml
compiler/qsc_fir/src/: assigner.rs  fir.rs  (+7 more)
compiler/qsc_formatter/: Cargo.toml
compiler/qsc_frontend/: Cargo.toml
compiler/qsc_hir/: Cargo.toml
compiler/qsc_linter/: Cargo.toml
compiler/qsc_lowerer/: Cargo.toml
compiler/qsc_manifest/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compile.rs  qasm.rs  qasm3.rs
jupyterlab/: .gitignore  .prettierignore  BUILDING.md  LICENSE  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  test_requirements.txt  tsconfig.json
jupyterlab/jupyterlab-core/: package.json
jupyterlab/qsharp-jupyterlab/: __init__.py
jupyterlab/qsharp_jupyterlab/: __init__.py
jupyterlab/src/: index.ts
jupyterlab/tests/: test_extension_install.py
jupyterlab/ui-tests/: package.json
katas/: Cargo.toml  README.md  index.ts  katas.ts
katas/content/: KatasLibrary.qs  index.json  katas.js  metadata.ts  tsconfig.json
katas/single_qubit_gates/: task1.qs  task1_reference.qs  task2.qs  task2_reference.qs  task3.qs  task3_reference.qs  task4.qs  task4_reference.qs  task5.qs  task5_reference.qs  task6.qs  task6_reference.qs  task7.qs  task7_reference.qs
katas/src/: katas-content.new.ts  lib.rs  tests.rs
katas/verify/: Cargo.toml
language_service/: Cargo.toml  README.md
language_service/src/: code_action.rs  code_lens.rs  compilation.rs  completion.rs  cursor_locator.rs  definition.rs  display.rs  format.rs  generate_docs.rs  hover.rs  identifier_locator.rs  lib.rs  ls_utils.rs  name_locator.rs  openqasm.rs  project_system.rs  protocol.rs  qasm.rs  qsc_utils.rs  references.rs  rename.rs  signature_help.rs  state.rs  test_utils.rs  tests.rs
noisy-simulator/: Cargo.toml
noisy-simulator/src/: density_matrix_simulator.rs  instrument.rs  kernel.rs  lib.rs  main.rs  operation.rs  state_vector_simulator.rs  tests.rs  trajectory_simulator.rs
noisy_simulator/: Cargo.toml
noisy_simulator/benches/: density_matrix_simulator.rs  noisy_simulator.rs
noisy_simulator/src/: density_matrix_simulator.rs  instrument.rs  kernel.rs  lib.rs  operation.rs  state_vector_simulator.rs  tests.rs
pip/: .gitignore  Cargo.toml  README.md  build_manylinux.sh  pyproject.toml
pip/qsharp/: Cargo.toml  README.md  __init__.py  _fs.py  _http.py  _ipython.py  _native.pyi  _qsharp.py  environment.yml  ipython.py  pyproject.toml  telemetry.py  telemetry_events.py
pip/samples/: azure_submission.ipynb  project.ipynb  sample.ipynb  sample.py  sample.qs
pip/src/: cli.rs  displayable_output.rs  formatting.rs  fs.rs  generic_estimator.rs  interop.rs  interpreter.rs  lib.rs  noisy_simulator.rs  python.rs  state_header_template.html  state_row_template.html  telemetry.rs
pip/tests/: circuit.qsc  test_enums.py  test_evaluator.py  test_generic_estimator.py  test_interpreter.py  test_noisy_simulator.py  test_project.py  test_qasm.py  test_qsharp.py  test_re.py
pip/tests-integration/: __init__.py  test_adaptive_ri_qir.py  test_adaptive_rif_qir.py  test_base_qir.py  test_qir.py  test_requirements.txt  utils.py
pip/tests-qir/: test_qir.py  test_requirements.txt
reproducer_of_bugs_terminator_of_souls/: Cargo.toml
reproducer_of_bugs_terminator_of_souls/src/: main.rs
resource_estimator/: Cargo.toml  README.md
resource_estimator/examples/: basic_logical_counts.rs  basic_qsharp.rs
resource_estimator/src/: counts.rs  estimates.rs  estimates2.rs  lib.rs  system.rs
samples_test/: Cargo.toml  build.rs
samples_test/src/: tests.rs
wasm/: Cargo.toml
wasm/src/: completion.rs  completions.rs  debug_service.rs  definition.rs  diagnostic.rs  hover.rs  language_service.rs  language_service_wasm.rs  lib.rs  line_column.rs  logging.rs  ls_utils.rs  project_system.rs  serializable_type.rs  test_discovery.rs  test_explorer.rs  tests.rs
widgets/: README.md  package.json  pyproject.toml  readme.md
widgets/js/: index.tsx
widgets/samples/: BitFlipCode.ipynb  Dynamics.ipynb
(+5203 files in other folders)
