[workspace]
members = [
    "compiler/qsc",
    "compiler/qsc_ast",
    "compiler/qsc_codegen",
    "compiler/qsc_data_structures",
    "compiler/qsc_eval",
    "compiler/qsc_fir",
    "compiler/qsc_frontend",
    "compiler/qsc_hir",
    "compiler/qsc_parse",
    "compiler/qsc_passes",
    "compiler/qsc_project",
    "fuzz",
    "katas",
    "language_service",
    "library/tests",
    "pip",
    "wasm",
]
resolver = "2"

[workspace.package]
authors = ["Microsoft"]
homepage = "https://github.com/microsoft/qsharp"
repository = "https://github.com/microsoft/qsharp"
edition = "2021"
license = "MIT"
version = "0.0.0"

[workspace.dependencies]
clap = "4.4"
criterion = { version = "0.5", default-features = false }
enum-iterator = "1.4"
env_logger = "0.10.0"
expect-test = "1.4"
getrandom = { version = "0.2" }
indoc = "2.0"
js-sys = "0.3"
libfuzzer-sys = "0.4"
log = "0.4"
miette = "5.10"
thiserror = "1.0"
num-bigint = "0.4"
num-complex = "0.4"
num-traits = "0.2"
indenter = "0.3"
regex-lite = "0.1"
rustc-hash = "1.1.0"
serde = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
rand = "0.8"
serde_json = { version = "1.0" }
pyo3 = { version = "0.20" }
quantum-sparse-sim = { git = "https://github.com/qir-alliance/qir-runner", rev = "f000e0066f56338595be37092cd0498f72ab10a2", default-features = false }

[profile.release]
debug = 1
strip = true
lto = "fat"
codegen-units = 1

[profile.release.package.fuzz]
codegen-units = 16
