[workspace]
members = [
    "katas",
    "library",
    "source/allocator",
    "source/allocator/mimalloc-sys",
    "source/compiler/qsc",
    "source/compiler/qsc_ast",
    "source/compiler/qsc_circuit",
    "source/compiler/qsc_codegen",
    "source/compiler/qsc_data_structures",
    "source/compiler/qsc_doc_gen",
    "source/compiler/qsc_eval",
    "source/compiler/qsc_fir",
    "source/compiler/qsc_frontend",
    "source/compiler/qsc_hir",
    "source/compiler/qsc_linter",
    "source/compiler/qsc_lowerer",
    "source/compiler/qsc_parse",
    "source/compiler/qsc_partial_eval",
    "source/compiler/qsc_passes",
    "source/compiler/qsc_project",
    "source/compiler/qsc_qasm",
    "source/compiler/qsc_rir",
    "source/fuzz",
    "source/language_service",
    "source/pip",
    "source/resource_estimator",
    "source/samples_test",
    "source/wasm",
]
resolver = "2"

[workspace.package]
authors = ["Microsoft"]
homepage = "https://github.com/microsoft/qsharp"
repository = "https://github.com/microsoft/qsharp"
edition = "2024"
license = "MIT"
version = "0.0.0"

[workspace.dependencies]
bitflags = "2.4"
clap = "4.4"
criterion = { version = "0.5", default-features = false }
difference = "2.0"
enum-iterator = "2.1"
env_logger = "0.11"
expect-test = "1.4"
futures = "0.3"
futures-util = "0.3"
fasteval = "0.2"
getrandom = "0.2"
indoc = "2.0"
js-sys = "0.3"
libfuzzer-sys = "0.4"
log = "0.4"
miette = { version = "7.2" }
thiserror = "1.0"
nalgebra = { version = "0.33" }
ndarray = "0.15.4"
num-bigint = "0.4"
num-complex = "0.4"
num-traits = "0.2"
probability = "0.20"
indenter = "0.3"
regex-lite = "0.1"
rustc-hash = "1"
serde = { version = "1.0", features = [ "derive" ] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
rand = "0.8"
serde_json = "1.0"
pyo3 = "0.24"
quantum-sparse-sim = { git = "https://github.com/qir-alliance/qir-runner", rev = "8cd6fa698521ecf96d459f88254e53dd6e5d6877" }
async-trait = "0.1"
tokio = { version = "1.44", features = ["macros", "rt"] }

[workspace.lints.clippy]
mod_module_files = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_raw_string_hashes = "allow"
unnecessary_wraps = "allow"
default_trait_access = "allow"
enum_glob_use = "allow"

[profile.release]
debug = "limited"
strip = "symbols"
lto = "fat"
codegen-units = 1

[profile.release.package.fuzz]
codegen-units = 16
