[package]
name = "allocator"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[target.'cfg(all(not(target_family = "wasm"), not(all(system = "windows", target_arch = "aarch64"))))'.dependencies]
mimalloc-sys = { path = "./mimalloc-sys" }

[lints]
workspace = true

