[package]
name = "fuzz"
version = "0.0.0"
publish = false

authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true, optional = true }
qsc = { path = "../compiler/qsc" }

[features]
do_fuzz = [ "dep:libfuzzer-sys" ]

[[bin]]
name = "compile"
path = "fuzz_targets/compile.rs"
test = false
doc = false
