[package]
name = "fuzz"
publish = false

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true, optional = true }
qsc = { path = "../compiler/qsc" }

[target.'cfg(not(any(target_family = "wasm")))'.dependencies]
allocator = { path = "../allocator" }

[features]
do_fuzz = [ "dep:libfuzzer-sys" ]

[lints]
workspace = true

[[bin]]
name = "qsharp"
path = "fuzz_targets/qsharp.rs"
test = false
doc = false

[[bin]]
name = "qasm"
path = "fuzz_targets/qasm.rs"
test = false
doc = false
