[package]
name = "katas"
version = "0.0.0"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qsc_frontend = { path = "../compiler/qsc_frontend" }
qsc_eval = { path = "../compiler/qsc_eval" }
qsc_passes = { path = "../compiler/qsc_passes" }

[dev-dependencies]
indoc = { workspace = true }
