[package]
name = "katas"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qsc = { path = "../compiler/qsc" }

[dev-dependencies]
indoc = { workspace = true }

[lib]
doctest = false
