[package]
name = "katas"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qsc = { path = "../compiler/qsc" }
qsc_data_structures = { path = "../compiler/qsc_data_structures" }

[lib]
doctest = false
