[package]
name = "qsls"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
expect-test = { workspace = true }
indoc = { workspace = true }

[dependencies]
log = { workspace = true }
miette = { workspace = true }
qsc = { path = "../compiler/qsc" }
rustc-hash = { workspace = true }
enum-iterator = { workspace = true }
regex-lite = { workspace = true }

[lib]
doctest = false
