[package]
name = "qsls"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
expect-test = { workspace = true }
indoc = { workspace = true }
tokio = { workspace = true }

[dependencies]
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
qsc = { path = "../compiler/qsc" }
rustc-hash = { workspace = true }
enum-iterator = { workspace = true }
regex-lite = { workspace = true }
qsc_project = { path = "../compiler/qsc_project", features = ["async"] }
async-trait = { workspace = true }

# workspace dependencies cannot be optional, so we define it here
lsp-server = { version = "0.7", optional = true } 
lsp-types = { version = "0.95", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }


[features]
lsp = ["lsp-server", "lsp-types", "serde_json", "serde"]

[lib]
doctest = false

[[bin]]
name = "qsharp-lsp"
required-features = ["lsp"]
