[package]
name = "noisy-simulator"
description = "Q# noisy simulator"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { workspace = true }
num-complex = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
