[package]
name = "qsharp-preview"
description = "Q# Python Bindings"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
num-bigint = { workspace = true }
num-complex = { workspace = true }
pyo3 = { workspace = true }
qsc = { path = "../compiler/qsc" }
miette = { workspace = true, features = ["fancy"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "qsharp._native"
