[package]
name = "qsharp"
description = "Q# Python Bindings"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
num-bigint = { workspace = true }
num-complex = { workspace = true }
qsc = { path = "../compiler/qsc" }
miette = { workspace = true, features = ["fancy"] }

[target.'cfg(not(any(target_os = "windows")))'.dependencies]
pyo3 = { workspace = true, features = ["abi3-py37", "extension-module"] }

[target.'cfg(any(target_os = "windows"))'.dependencies]
# generate-import-lib: skip requiring Python 3 distribution
# files to be present on the (cross-)compile host system.
pyo3 = { workspace = true, features = ["abi3-py37", "extension-module", "generate-import-lib"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "qsharp._native"
