[project]
name = "qsharp-nightly"
version = "0.0.0"
requires-python = ">= 3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
jupyterlab = ["qsharp-jupyterlab-nightly"]

[build-system]
requires = ["maturin ~= 1.2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "qsharp._native"
