[project]
name = "qsharp"
version = "0.0.0"
requires-python = ">= 3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
jupyterlab = ["qsharp-jupyterlab"]
widgets = ["qsharp-widgets"]

[build-system]
requires = ["maturin ~= 1.2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "qsharp._native"
