[package]
name = "qsc_wasm"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
# wasm-pack doesn't like the workspace format for the below, so copied in for now.
homepage = "https://github.com/microsoft/qsharp"
repository = "https://github.com/microsoft/qsharp"
license = "MIT"
description = "Wasm module for the qsc compiler"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
js-sys = { workspace = true }
katas = { path = "../katas"}
log = { workspace = true }
miette = { workspace = true}
num-bigint = { workspace = true }
num-complex = { workspace = true }
qsls = { path = "../language_service" }
qsc = { path = "../compiler/qsc" }
serde = { workspace = true, features = ["derive"]}
serde-wasm-bindgen = { workspace = true}
wasm-bindgen = { workspace = true}
serde_json = { workspace = true }

# This is a transitive dependency of qir-stdlib which fails to build for wasm if 'js' feature isn't enabled.
getrandom = { workspace = true, features = ["js"] }
