[package]
name = "qsc_data_structures"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
bitflags = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
