[package]
name = "qsc_doc_gen"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
expect-test = { workspace = true }

[dependencies]
regex-lite = { workspace = true }
qsc_data_structures = { path = "../qsc_data_structures" }
qsc_frontend = { path = "../qsc_frontend" }
qsc_ast = { path = "../qsc_ast" }
qsc_hir = { path = "../qsc_hir" }
rustc-hash = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
