[package]
name = "qsc_eval"
version = "0.0.0"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miette = { workspace = true }
num-bigint = { workspace = true }
num-complex = { workspace = true }
quantum-sparse-sim = { git = "https://github.com/qir-alliance/qir-runner", rev = "f0e66e1bf18f56263f808ed0597b04e8e2a71c27", default-features = false}
qsc_data_structures = { path = "../qsc_data_structures" }
qsc_hir = { path = "../qsc_hir" }
rand =  { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
indoc = { workspace = true }
qsc_frontend = { path = "../qsc_frontend" }
qsc_passes = { path = "../qsc_passes" }
