[package]
name = "qsc_eval"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miette = { workspace = true }
num-bigint = { workspace = true }
num-complex = { workspace = true }
quantum-sparse-sim = { workspace = true }
qsc_data_structures = { path = "../qsc_data_structures" }
qsc_fir = { path = "../qsc_fir" }
qsc_frontend = { path = "../qsc_frontend" }
qsc_hir = { path = "../qsc_hir" }
rand =  { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
indoc = { workspace = true }
qsc_passes = { path = "../qsc_passes" }

[lib]
doctest = false
