[package]
name = "qsc_fir"
version = "0.0.12"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indenter = { workspace = true }
num-bigint = { workspace = true }
qsc_data_structures = { path = "../qsc_data_structures" }
